--- a/front/css/style.css
+++ b/front/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 header {
   display: flex;
   justify-content: center;
@@ -11,10 +15,10 @@ header {
 }
 
 #game-zone {
-  width: 80%;
   border: 1px solid gray;
   border-radius: 0.5rem;
   padding: 1.5rem 1rem 1.5rem 1rem;
+  margin: 1rem;
   position: relative;
 }
 
@@ -35,20 +39,29 @@ header {
 
 #form-add-game {
   width: 100%;
-  display: flex;
+  height: 2rem;
   margin-top: 1rem;
-  justify-content: space-around;
-  align-items: center;
   font-size: 1.05rem;
+  vertical-align: middle;
 }
 
 #input-add-game {
+  box-sizing: border-box;
   width: 80%;
-  padding: 1rem;
+  height: 100%;
 }
 
 #btn-add-game {
-  padding: 1rem;
+  float: right;
+  right: 0px;
+  width: 15%;
+  height: 100%;
+  text-decoration: none;
+  border-radius: 0.75rem;
+  border: 1px solid black;
+  background-color: rgb(68, 150, 218);
+  color: white;
+  padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
 #game-list {
